--- a/src/Muzich/CoreBundle/Resources/views/Language/languages.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Language/languages.html.twig
@@ -1,4 +1,4 @@
-<div id="choose_language">
-  <a href="{{ path('change_language', {'language' : 'fr'}) }}">fr</a> |
-  <a href="{{ path('change_language', {'language' : 'en'}) }}">en</a>
+<div id="languages">
+  <a href="{{ path('change_language', {'language' : 'fr'}) }}">FR</a>
+  <a href="{{ path('change_language', {'language' : 'en'}) }}">EN</a>
 </div>
