--- a/src/Muzich/CoreBundle/Resources/views/Tag/tagsList.favorite.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Tag/tagsList.favorite.html.twig
@@ -11,7 +11,7 @@
   <ul id="favorite_tags">
     {% for key, tag in tags %}
       <li class="{{ css_list_length_class(key, tags|length) }}" {% if loop.index0 > cloud_tags_limit_to_display %}style="display: none;"{% endif %}>
-        <a id="filtering_tag_{{ tag.id }}" href="#" class="button tag">
+        <a id="filtering_tag_{{ tag.id }}" href="#" class="tag">
           {{ tag.name }}
         </a>
       </li>
@@ -24,5 +24,4 @@
       {{ 'tags.cloud.display_more'|trans({}, 'userui') }}
     </a>
   {% endif %}
-  
 {% endif %}
