--- a/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
@@ -24,7 +24,7 @@
     <div class="show_options">
       
       {% if his_group %}
-        <a class="button" href="{{ path('group_edit', { 'slug': group.slug }) }}" >
+        <a class="button darkbutton" href="{{ path('group_edit', { 'slug': group.slug }) }}" >
           {{ 'group.edit'|trans({}, 'groups') }}
         </a>
       {% endif %}
