--- a/src/Muzich/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Security/login.html.twig
@@ -4,18 +4,24 @@
   {% endif %}
 
   <form action="{{ path("fos_user_security_check") }}" method="post">
-      <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-      <input type="text" id="username" name="_username" value="{{ last_username }}" />
+    
+      <input type="text" id="username" name="_username" value="{{ last_username }}"
+        class="niceinput"
+        placeholder="{{ 'security.login.username'|trans({}, 'userui') }}"
+      />
 
-      <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-      <input type="password" id="password" name="_password" />
-
-      <br />
-      <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-      <label for="remember_me">{{ 'login.remember_me.label'|trans({}, 'userui') }}</label>
+      <input type="password" id="password" name="_password"
+        class="niceinput"
+        placeholder="{{ 'security.login.password'|trans({}, 'userui') }}""
+      />
 
       <input type="submit" class="button" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
+      
+      <div class="textcenter">
+        <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+        <label for="remember_me">{{ 'login.remember_me.label'|trans({}, 'userui') }}</label>
+        - <a href="{{ path('fos_user_resetting_request') }}">{{ 'connexion.password_lost'|trans({}, 'userui') }}</a>
+      </div>
+
   </form>
 </div>
-
-<a href="{{ path('fos_user_resetting_request') }}">{{ 'connexion.password_lost'|trans({}, 'userui') }}</a>
