--- a/src/Muzich/UserBundle/Resources/views/User/account.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/User/account.html.twig
@@ -1,6 +1,7 @@
 {% extends "MuzichUserBundle::layout.html.twig" %}
 
 {% block title %}Mon compte{% endblock %}
+{% block mainbox_classes %}mainbox_padding{% endblock %}
 
 {% block content %}
 
