--- a/web/bundles/muzichgroups/css/groups.css
+++ b/web/bundles/muzichgroups/css/groups.css
@@ -5,8 +5,8 @@
   float: right;
 }
 
-#container #group_add_box
+/*#container #group_add_box
 {
   background-color: #e3f6fd;
   padding: 20px;
-}
+}*/
