--- a/src/Muzich/CoreBundle/Resources/views/Tag/tagFavoritesForm.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Tag/tagFavoritesForm.html.twig
@@ -11,5 +11,5 @@
 
   {{ form_row(form._token) }}
 
-  <input type="submit" class="button" />
+  <input type="submit" class="button" value="{{ 'tags.favorites.submit'|trans([], 'userui') }}" />
 </form>
