--- a/src/Muzich/FavoriteBundle/Resources/views/Favorite/myList.html.twig
+++ b/src/Muzich/FavoriteBundle/Resources/views/Favorite/myList.html.twig
@@ -1,25 +1,28 @@
 {% extends "MuzichFavoriteBundle::layout.html.twig" %}
 
 {% block title %}Mes favoris{% endblock %}
+{% block mainbox_classes %}mainbox_nopadding{% endblock %}
 
 {% block content %}
 
-  {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with {'active': 'myfavorites'} %}
-
-  <h2>{{ 'favorites.your_favorites'|trans({}, 'network') }}</h2>
-
-  {% include "MuzichCoreBundle:Tag:tagsList.favorite.html.twig" with {
-    'user_id' : app.user.id
-  } %}
+  <div class="top_tools">
+    
+    <h1>{{ 'favorites.your_favorites'|trans({}, 'network') }}</h1>
   
-  <a href="{{ path('elements_get_filter_data_autoplay_favorite', {
-        'show_type'  : 'user',
-        'show_id'    : app.user.id, 
-        'data'       : '[]'
-      }) }}" class="button" id="autoplay_launch" 
-     title="{{ 'elements.autoplay.launch'|trans({}, 'elements') }}" >
-    <img src="{{ asset('/bundles/muzichcore/img/1353494305_player_play.png') }}" alt="" />
-  </a>
+    {% include "MuzichCoreBundle:Tag:tagsList.favorite.html.twig" with {
+      'user_id' : app.user.id
+    } %}
+    
+    <a href="{{ path('elements_get_filter_data_autoplay_favorite', {
+          'show_type'  : 'user',
+          'show_id'    : app.user.id, 
+          'data'       : '[]'
+        }) }}" class="button" id="autoplay_launch" 
+       title="{{ 'elements.autoplay.launch'|trans({}, 'elements') }}" >
+      <img src="{{ asset('/bundles/muzichcore/img/1353494305_player_play.png') }}" alt="" />
+    </a>
+  
+  </div>
   
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
     
@@ -28,12 +31,12 @@
   </div>
   
   {% if elements|length %}
-     <span class="elements_more">
-       <input type="hidden" id="more_elements_url" value="{{ path('favorite_get', {'user_id': app.user.id, 'tags_ids_json' : ''}) }}" />
-       <a href="{{ path('favorite_get', {'user_id': app.user.id, 'tags_ids_json' : '[]'}) }}" class="elements_more button">
-         {{ 'more'|trans({}, 'userui') }}
-       </a>
-     </span>
+    <input type="hidden" id="more_elements_url" value="{{ path('favorite_get', {'user_id': app.user.id, 'tags_ids_json' : ''}) }}" />
+    <a href="{{ path('favorite_get', {'user_id': app.user.id, 'tags_ids_json' : '[]'}) }}" class="elements_more">
+      <div>
+       {{ 'more'|trans({}, 'userui') }}
+     </div>
+    </a>
   {% endif %}
   
   <input type="hidden" id="autoplay_url" value="{{ path('elements_get_filter_data_autoplay_favorite', {
